manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend
  labels: 
    app_part: app_frontend
spec:
  replicas: 1
  selector:
    matchLabels: 
      app_part: app_frontend
  template:
    metadata:
      labels: 
        app_part: app_frontend
    spec:
      containers:
      - name: frontend
        image: anjaliyo/fnd_frontend:v5
        ports: 
          - containerPort: 80
