manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
      app_part: app_frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
