manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fnd-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: fake-news-detector.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service
            port:
              number: 80
